log/PMTfyDebug/log_PMTfication_99999_22112024_105438.out
nohup: ignoring input
  File "/lustre/hpc/icecube/cyan/factory/DOMification/PMTfier.py", line 149
    pa_pmtfied = summariser()
    ^
SyntaxError: invalid syntax
